--- a/about.html
+++ b/about.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"/>
-    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./about.css">
     <title>About</title>
   </head>
@@ -18,53 +16,44 @@
 
 
     <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+  >
+    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      <svg
+        class="bi me-2"
+        width="40"
+        height="32"
+        role="img"
+        aria-label="Bootstrap"
       >
-        <a
-          href="/"
-          class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
-        >
-          <svg
-            class="bi me-2"
-            width="40"
-            height="32"
-            role="img"
-            aria-label="Bootstrap"
-          >
-            <use xlink:href="#bootstrap" />
-          </svg>
-        </a>
+        <use xlink:href="#bootstrap" />
+      </svg>
+    </a>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li>
-            <a href="./index.html" class="nav-link px-2 link-secondary">Home</a>
-          </li>
-          <li>
-            <a href="./about.html" class="nav-link px-2 link-dark">About</a>
-          </li>
-          <li>
-            <a href="./resume.html" class="nav-link px-2 link-dark">Resume</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link px-2 link-dark"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="./contact.html" class="nav-link px-2 link-dark">Contact</a>
-          </li>
-        </ul>
-      </header>
-    </div>
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li>
+        <a href="./index.html" class="nav-link px-2 link-secondary">Home</a>
+      </li>
+      <li>
+        <a href="./about.html" class="nav-link px-2 link-dark">About</a>
+      </li>
+      <li>
+        <a href="./resume.html" class="nav-link px-2 link-dark">Resume</a>
+      </li>
+      <li>
+        <a href="./portfolio.html" class="nav-link px-2 link-dark"
+          >Portfolio</a
+        >
+      </li>
+      <li>
+        <a href="./contact.html" class="nav-link px-2 link-dark">Contact</a>
+      </li>
+    </ul>
+  </header>
+</div>
 
 
     <div class="container bg-light border">
-
-
-        <div class="title">
-            <h1><strong>About</strong></h1>
-            <hr style="width:50%; margin-left: 25%">
-        </div>
 
         <div class="pic">
             <img src="./about.jpg" width="400px">
@@ -72,8 +61,8 @@
          </div>
 
         <div class="info">
-            <h1><strong>I'm <br>Jenn Franco.
-              <br><br> I'm happy you're here!</strong></h1><br> 
+              <br><h1 class="bg-light border rounded-3"><strong>I'm Jennifer</strong></h1><br>
+
                 <p>I began my professional career working in web development at Company.</p>
 
             <hr style="width:50%; margin-left: 25%">
@@ -100,18 +89,6 @@
 
         <div class="img3">
             <img src="./img4.jpg" alt="" width="200px">
-        </div>
-
-        <div class="img4">
-            <img src="./img8.jpg" alt="" width="200px">
-        </div>
-
-        <div class="img5">
-            <img src="./img10.jpg" alt="" width="200px">
-        </div>
-
-        <div class="img6">
-            <img src="./img11.jpg" alt="" width="200px"> 
         </div>
 
     </div>    
