--- a/about.html
+++ b/about.html
@@ -61,7 +61,9 @@
          </div>
 
         <div class="info">
-              <br><h1 class="bg-light border rounded-3"><strong>I'm Jennifer</strong></h1><br>
+              <br><h1><strong>I'm Jennifer</strong></h1><br>
+
+              <hr style="width:50%; margin-left: 25%">
 
                 <p>I began my professional career working in web development at Company.</p>
 
@@ -80,15 +82,15 @@
     
 
         <div class="img1">
-            <img src="./img1.jpg" alt="" width="200px">
+            <img src="./img1.jpg" alt="" width="150px">
         </div>
 
         <div class="img2">
-            <img src="./img5.jpg" alt="" width="200px" >
+            <img src="./img5.jpg" alt="" width="150px" >
         </div>
 
         <div class="img3">
-            <img src="./img4.jpg" alt="" width="200px">
+            <img src="./img4.jpg" alt="" width="150px">
         </div>
 
     </div>    
