--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
       <link rel="stylesheet" href="./portfolio.css">
     <title>Portfolio</title>
   </head>
@@ -63,7 +63,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a mockup website that I used to practice skills I've learned, thereby deepening my understanding of their purpose.<br>
+                    This is a mockup website that I used to practice skills I've learned, thereby deepening my understanding of their purpose.<br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -83,7 +83,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                 This table was built with HTML Table Elements, learned how to access & use Element Properties like innerHTML and use Event Listener Methods like getElementById.
+                 This table was built with HTML Table Elements, learned how to access & use Element Properties like innerHTML and use Event Listener Methods like getElementById.<br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -103,7 +103,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    Here I was able to practice good file structure, use css grid, flex, media queries, and the box model to build a well-built and responsive website.
+                    Here I was able to practice good file structure, use css grid, flex, media queries, and the box model to build a well-built and responsive website.<br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -144,8 +144,8 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                  This project really cemented the importance of wireframing, CSS flex and box model.
-                  </p><br><br><br>
+                  This project really cemented the importance of wireframing, CSS flex and box model.<br><br><br>
+                  </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
@@ -164,7 +164,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    I built a Contact Me Page that is responsive to mobile, tablet, & laptop. And I added a hint of flair with Glow text!<br><br><br>
+                    I built a Contact Me Page that is responsive to mobile, tablet, & laptop. And I added a hint of flair with Glow text!<br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -184,7 +184,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    This project helped me understand how JavaScript is connected to your HTML. It helped be break things down to see how this function is working.
+                    This project helped me understand how JavaScript is connected to your HTML. It helped be break things down to see how this function is working. <br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -224,7 +224,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    Here I used Fetch API to interact with APIs outside of the browser, use APIs, loop over JavaScript arrays, create multiple items and filter items.<br>
+                    Here I used Fetch API to interact with APIs outside of the browser, use APIs, loop over JavaScript arrays, create multiple items and filter items.<br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
