changing porfolio card sizes

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    I was able to change HTML Element Properties with JavaScript. Introduced to how JavaScript allows us to interact with the DOM and capture DOM Events like onclick and onkeyup.
+                    This project introduced me to how JavaScript allows us to interact with the DOM and capture DOM Events like onclick and onkeyup.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
