adding icons again to resume

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./resume.css">
     <title>Resume</title>
   </head>
@@ -62,9 +62,9 @@
    </div> 
 
     <div class="contact">
-        <p>+1 123-456-7890</p>
-        <p>email@gmail.com</p>
-        <p>123 Somewhere, Texas 10090</p> 
+        <p><i class="fa fa-phone"></i>  +1 123-456-7890</p>
+        <p><i class="fa fa-envelope-square"></i> email@gmail.com</p>
+        <p> <i class="fa fa-home"></i> 123 Somewhere, Texas 10090</p> 
     </div>
 
     <div class="summary">
